--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -146,5 +146,17 @@
     <None Include="Assets\Shaders\basic_texture.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="wall_trans.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="wall_trans.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\texture-directional.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\texture-directional.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
